# embedded-engr

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
blink-led/: Cargo.toml  logger.txt  memory.x
blink-led/src/: main.rs
snake-game/: Cargo.toml
snake-game/src/: main.rs
