[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
nb = { workspace = true }
stm32f4xx-hal = { workspace = true }

[[bin]]
name = "snake-game"
test = false
bench = false